test/features/errors/parser/e0014_invalid_literal_pattern.spl
# E0014: Invalid Literal Pattern

Feature: E0014 - Invalid Literal Pattern
  As a Simple compiler
  I want to detect invalid literals used in patterns
  So that only valid pattern literals are accepted

  Background:
    Given I have the Simple compiler

  Scenario: Invalid float literal in pattern
    When I compile:
      '''
      fn check(x: i32) -> str:
        match x:
          3.14: "pi"  # Error: float literals not allowed in patterns
          _: "other"
      '''
    Then I should see error E0014 at line 3
    And the error message should be "invalid literal in pattern: {literal}"
    And the label should point to "3.14"
    And the help should suggest "only certain literals are allowed in patterns"

  Scenario: Invalid string literal with interpolation in pattern
    When I compile:
      '''
      fn check(s: str) -> bool:
        val x = "test"
        match s:
          "{x}": true  # Error: interpolated strings not allowed
          _: false
      '''
    Then I should see error E0014 at line 4
    And the error should indicate "invalid literal pattern"

  Scenario: Valid integer literal in pattern
    When I compile:
      '''
      fn check(x: i32) -> str:
        match x:
          42: "answer"
          0: "zero"
          _: "other"
      '''
    Then compilation should succeed

  Scenario: Valid string literal in pattern
    When I compile:
      '''
      fn check(s: str) -> str:
        match s:
          "hello": "greeting"
          "goodbye": "farewell"
          _: "unknown"
      '''
    Then compilation should succeed

  Scenario: Valid char literal in pattern
    When I compile:
      '''
      fn check(c: char) -> str:
        match c:
          'a': "lowercase a"
          'A': "uppercase A"
          _: "other"
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test(x: i32):
        match x:
          3.14: "invalid"
          _: "ok"
      '''
    Then I should see error E0014
    And the error message should contain "패턴에 잘못된 리터럴"
